@@ -1,5 +1,7 @@
 package com.github.minecraftschurlimods.bibliocraft.client.screen;
 
+import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.util.text.StringTextComponent;
 import com.github.minecraftschurlimods.bibliocraft.client.widget.SpriteButton;
 import com.github.minecraftschurlimods.bibliocraft.content.stockroomcatalog.StockroomCatalogContent;
 import com.github.minecraftschurlimods.bibliocraft.content.stockroomcatalog.StockroomCatalogItemEntry;
@@ -13,25 +15,24 @@ import com.github.minecraftschurlimods.bibliocraft.util.Translations;
 import com.github.minecraftschurlimods.bibliocraft.util.lectern.LecternUtil;
 import com.github.minecraftschurlimods.bibliocraft.util.lectern.TakeLecternBookPacket;
 import com.mojang.datafixers.util.Either;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.EditBox;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.inventory.PageButton;
+import com.mojang.blaze3d.matrix.MatrixStack;
+import net.minecraft.client.gui.widget.button.Button;
+import net.minecraft.client.gui.widget.TextFieldWidget;
+import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.gui.widget.button.ChangePageButton;
 import net.minecraft.client.particle.Particle;
-import net.minecraft.client.particle.ParticleEngine;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.GlobalPos;
-import net.minecraft.core.particles.ParticleTypes;
-import net.minecraft.network.chat.CommonComponents;
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.RandomSource;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.Level;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
+import net.minecraft.client.particle.ParticleManager;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.GlobalPos;
+import net.minecraft.particles.ParticleTypes;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.ResourceLocation;
+import java.util.Random;
+import net.minecraft.util.Hand;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.item.ItemStack;
+import net.minecraft.world.World;
+import net.minecraftforge.items.CapabilityItemHandler;
 import com.github.minecraftschurlimods.bibliocraft.BCEventHandler;
 import org.lwjgl.glfw.GLFW;
 
@@ -43,41 +44,41 @@ import java.util.stream.IntStream;
 
 public class StockroomCatalogScreen extends Screen {
     private static final ResourceLocation BACKGROUND = BCUtil.bcLoc("textures/gui/stockroom_catalog.png");
-    private static final ResourceLocation LOCATE_ICON = BCUtil.bcLoc("locate");
-    private static final ResourceLocation LOCATE_ICON_HIGHLIGHTED = BCUtil.bcLoc("locate_highlighted");
-    private static final ResourceLocation REMOVE_ICON = BCUtil.bcLoc("remove");
-    private static final ResourceLocation REMOVE_ICON_HIGHLIGHTED = BCUtil.bcLoc("remove_highlighted");
+    private static final ResourceLocation LOCATE_ICON = BCUtil.bcLoc("textures/gui/sprites/locate.png");
+    private static final ResourceLocation LOCATE_ICON_HIGHLIGHTED = BCUtil.bcLoc("textures/gui/sprites/locate_highlighted.png");
+    private static final ResourceLocation REMOVE_ICON = BCUtil.bcLoc("textures/gui/sprites/remove.png");
+    private static final ResourceLocation REMOVE_ICON_HIGHLIGHTED = BCUtil.bcLoc("textures/gui/sprites/remove_highlighted.png");
     private static final int ROWS_PER_PAGE = 11;
     private static final int PARTICLE_COUNT = 16;
     private final ItemStack stack;
-    private final Player player;
-    private final InteractionHand hand;
+    private final PlayerEntity player;
+    private final Hand hand;
     private final BlockPos lectern;
-    private final RandomSource random = RandomSource.create();
+    private final Random random = new Random();
     private final List<Button> removeButtons = new ArrayList<>();
     private final List<Button> locateButtons = new ArrayList<>();
     private StockroomCatalogContent data;
     private boolean showContainerList = false;
     private int page = 0;
     private String search = "";
-    private PageButton forwardButton;
-    private PageButton backButton;
-    private List<BlockPos> containers = List.of();
-    private List<BlockPos> visibleContainers = List.of();
-    private List<StockroomCatalogItemEntry> items = List.of();
-    private List<StockroomCatalogItemEntry> visibleItems = List.of();
+    private ChangePageButton forwardButton;
+    private ChangePageButton backButton;
+    private List<BlockPos> containers = java.util.Collections.emptyList();
+    private List<BlockPos> visibleContainers = java.util.Collections.emptyList();
+    private List<StockroomCatalogItemEntry> items = java.util.Collections.emptyList();
+    private List<StockroomCatalogItemEntry> visibleItems = java.util.Collections.emptyList();
     private StockroomCatalogSorting.Container containerSorting = StockroomCatalogSorting.Container.ALPHABETICAL_ASC;
     private StockroomCatalogSorting.Item itemSorting = StockroomCatalogSorting.Item.ALPHABETICAL_ASC;
 
-    public StockroomCatalogScreen(ItemStack stack, Player player, InteractionHand hand) {
+    public StockroomCatalogScreen(ItemStack stack, PlayerEntity player, Hand hand) {
         this(stack, player, hand, null);
     }
 
-    public StockroomCatalogScreen(ItemStack stack, Player player, BlockPos lectern) {
+    public StockroomCatalogScreen(ItemStack stack, PlayerEntity player, BlockPos lectern) {
         this(stack, player, null, lectern);
     }
 
-    private StockroomCatalogScreen(ItemStack stack, Player player, InteractionHand hand, BlockPos lectern) {
+    private StockroomCatalogScreen(ItemStack stack, PlayerEntity player, Hand hand, BlockPos lectern) {
         super(stack.getHoverName());
         this.stack = stack;
         this.player = player;
@@ -88,7 +89,7 @@ public class StockroomCatalogScreen extends Screen {
     }
 
     @Override
-    public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTick) {
+    public void render(MatrixStack graphics, int mouseX, int mouseY, float partialTick) {
         renderBackground(graphics);
         super.render(graphics, mouseX, mouseY, partialTick);
         int x = (width - 256) / 2;
@@ -97,49 +98,49 @@ public class StockroomCatalogScreen extends Screen {
         if (showContainerList) {
             for (BlockPos pos : visibleContainers) {
                 ItemStack blockItem = new ItemStack(ClientUtil.getLevel().getBlockState(pos).getBlock().asItem());
-                graphics.renderItem(blockItem, x + 34, i * 19 + 29);
-                graphics.renderItemDecorations(font, blockItem, x + 34, i * 19 + 29);
-                String itemText = blockItem.getHoverName().getString(137);
-                graphics.drawString(font, itemText, x + 51, i * 19 + 33, 0, false);
+                this.minecraft.getItemRenderer().renderGuiItem(blockItem, x + 34, i * 19 + 29);
+                this.minecraft.getItemRenderer().renderGuiItemDecorations(font, blockItem, x + 34, i * 19 + 29);
+                String itemText = font.plainSubstrByWidth(blockItem.getHoverName().getString(), 137);
+                font.draw(graphics, itemText, x + 51, i * 19 + 33, 0);
                 i++;
             }
             if (mouseX >= x + 34 && mouseX < x + 50) {
                 if (y > 0 && y % 19 < 16 && y / 19 < visibleContainers.size()) {
                     BlockPos container = visibleContainers.get(y / 19);
                     int distance = (int) (lectern != null ? Math.sqrt(lectern.distSqr(container)) : ClientUtil.getPlayer().position().distanceTo(BCUtil.toVec3(container)));
-                    graphics.renderTooltip(font, Component.translatable(Translations.STOCKROOM_CATALOG_DISTANCE_KEY, distance), mouseX, mouseY);
+                    this.renderTooltip(graphics, new TranslationTextComponent(Translations.STOCKROOM_CATALOG_DISTANCE_KEY, distance), mouseX, mouseY);
                 }
             }
             if (mouseX >= x + 189 && mouseX < x + 205) {
                 if (y > 0 && y % 19 < 16 && y / 19 < visibleContainers.size()) {
-                    graphics.renderTooltip(font, Translations.STOCKROOM_CATALOG_REMOVE, mouseX, mouseY);
+                    this.renderTooltip(graphics, Translations.STOCKROOM_CATALOG_REMOVE, mouseX, mouseY);
                 }
             }
             if (mouseX >= x + 206 && mouseX < x + 222) {
                 if (y > 0 && y % 19 < 16 && y / 19 < visibleContainers.size()) {
-                    graphics.renderTooltip(font, Translations.STOCKROOM_CATALOG_LOCATE, mouseX, mouseY);
+                    this.renderTooltip(graphics, Translations.STOCKROOM_CATALOG_LOCATE, mouseX, mouseY);
                 }
             }
         } else {
             for (StockroomCatalogItemEntry entry : visibleItems) {
-                graphics.renderItem(entry.item(), x + 34, i * 19 + 29);
-                graphics.renderItemDecorations(font, entry.item(), x + 34, i * 19 + 29);
-                String countText = Component.translatable(Translations.STOCKROOM_CATALOG_COUNT_KEY, entry.count()).getString();
+                this.minecraft.getItemRenderer().renderGuiItem(entry.item(), x + 34, i * 19 + 29);
+                this.minecraft.getItemRenderer().renderGuiItemDecorations(font, entry.item(), x + 34, i * 19 + 29);
+                String countText = new TranslationTextComponent(Translations.STOCKROOM_CATALOG_COUNT_KEY, entry.count()).getString();
                 int countWidth = font.width(countText);
-                graphics.drawString(font, countText, x + 205 - countWidth, i * 19 + 33, 0, false);
-                String itemText = entry.item().getHoverName().getString(153 - countWidth);
-                graphics.drawString(font, itemText, x + 51, i * 19 + 33, 0, false);
+                font.draw(graphics, countText, x + 205 - countWidth, i * 19 + 33, 0);
+                String itemText = font.plainSubstrByWidth(entry.item().getHoverName().getString(), 153 - countWidth);
+                font.draw(graphics, itemText, x + 51, i * 19 + 33, 0);
                 i++;
             }
             if (mouseX >= x + 34 && mouseX < x + 50) {
                 if (y > 0 && y % 19 < 16 && y / 19 < visibleItems.size()) {
                     ItemStack item = visibleItems.get(y / 19).item();
-                    graphics.renderTooltip(font, getTooltipFromItem(getMinecraft(), item), item.getTooltipImage(), item, mouseX, mouseY);
+                    this.renderTooltip(graphics, item, mouseX, mouseY);
                 }
             }
             if (mouseX >= x + 206 && mouseX < x + 222) {
                 if (y > 0 && y % 19 < 16 && y / 19 < visibleItems.size()) {
-                    graphics.renderTooltip(font, Translations.STOCKROOM_CATALOG_LOCATE, mouseX, mouseY);
+                    this.renderTooltip(graphics, Translations.STOCKROOM_CATALOG_LOCATE, mouseX, mouseY);
                 }
             }
         }
@@ -162,82 +163,106 @@ public class StockroomCatalogScreen extends Screen {
         locateButtons.clear();
         removeButtons.clear();
         int x = (width - 256) / 2;
-        Component switchComponent = showContainerList ? Translations.STOCKROOM_CATALOG_SHOW_ITEMS : Translations.STOCKROOM_CATALOG_SHOW_CONTAINERS;
+        ITextComponent switchComponent = showContainerList ? Translations.STOCKROOM_CATALOG_SHOW_ITEMS : Translations.STOCKROOM_CATALOG_SHOW_CONTAINERS;
         if (lectern != null) {
-            addRenderableWidget(Button.builder(Translations.VANILLA_TAKE_BOOK, $ -> {
-                LecternUtil.takeLecternBook(player, player.level(), lectern);
+            addButton(new Button(width / 2 - 151, 260, 98, 20, Translations.VANILLA_TAKE_BOOK, $ -> {
+                LecternUtil.takeLecternBook(player, player.level, lectern);
                 BCEventHandler.getChannel().sendToServer(new TakeLecternBookPacket(lectern));
                 onClose();
-            }).bounds(width / 2 - 151, 260, 98, 20).build());
-            addRenderableWidget(Button.builder(switchComponent, $ -> toggleMode()).bounds(width / 2 - 49, 260, 98, 20).build());
-            addRenderableWidget(Button.builder(CommonComponents.GUI_DONE, $ -> onClose()).bounds(width / 2 + 53, 260, 98, 20).build());
+            }));
+            addButton(new Button(width / 2 - 49, 260, 98, 20, switchComponent, $ -> toggleMode()));
+            addButton(new Button(width / 2 + 53, 260, 98, 20, net.minecraft.client.gui.DialogTexts.GUI_DONE, $ -> onClose()));
         } else {
-            addRenderableWidget(Button.builder(switchComponent, $ -> toggleMode()).bounds(width / 2 - 100, 260, 98, 20).build());
-            addRenderableWidget(Button.builder(CommonComponents.GUI_DONE, $ -> onClose()).bounds(width / 2 + 2, 260, 98, 20).build());
+            addButton(new Button(width / 2 - 100, 260, 98, 20, switchComponent, $ -> toggleMode()));
+            addButton(new Button(width / 2 + 2, 260, 98, 20, net.minecraft.client.gui.DialogTexts.GUI_DONE, $ -> onClose()));
         }
-        EditBox searchBox = addRenderableWidget(new EditBox(getMinecraft().font, x + 33, 15, 140, 8, Component.empty()));
+        TextFieldWidget searchBox = addButton(new TextFieldWidget(getMinecraft().font, x + 33, 15, 140, 8, new StringTextComponent("")));
         searchBox.setTextColor(0);
         searchBox.setBordered(false);
         setEditBoxTextShadow(searchBox);
-        searchBox.setHint(Translations.STOCKROOM_CATALOG_SEARCH);
+        searchBox.setSuggestion(search.isEmpty() ? Translations.STOCKROOM_CATALOG_SEARCH.getString() : null);
+        searchBox.setValue(search);
         searchBox.setResponder(e -> {
+            searchBox.setSuggestion(e.isEmpty() ? Translations.STOCKROOM_CATALOG_SEARCH.getString() : null);
             search = e.toLowerCase(Locale.ROOT);
             updateContents();
         });
-        forwardButton = addRenderableWidget(new PageButton(x + 194, 236, true, $ -> {
+        forwardButton = addButton(new ChangePageButton(x + 194, 236, true, $ -> {
             page++;
             updateContents();
         }, false));
-        backButton = addRenderableWidget(new PageButton(x + 30, 236, false, $ -> {
+        backButton = addButton(new ChangePageButton(x + 30, 236, false, $ -> {
             page--;
             updateContents();
         }, false));
         if (showContainerList) {
-            addRenderableWidget(new SortButton<>(StockroomCatalogSorting.Container.ALPHABETICAL_ASC, x + 172, 11, 52, 14, b -> {
+            addButton(new SortButton<>(StockroomCatalogSorting.Container.ALPHABETICAL_ASC, x + 172, 11, 52, 14, b -> {
                 SortButton<StockroomCatalogSorting.Container> button = (SortButton<StockroomCatalogSorting.Container>) b;
-                button.setValue(switch (button.getValue()) {
-                    case ALPHABETICAL_ASC -> StockroomCatalogSorting.Container.ALPHABETICAL_DESC;
-                    case ALPHABETICAL_DESC -> StockroomCatalogSorting.Container.DISTANCE_ASC;
-                    case DISTANCE_ASC -> StockroomCatalogSorting.Container.DISTANCE_DESC;
-                    case DISTANCE_DESC -> StockroomCatalogSorting.Container.ALPHABETICAL_ASC;
-                });
+                StockroomCatalogSorting.Container next;
+                switch (button.getValue()) {
+                    case ALPHABETICAL_ASC:
+                        next = StockroomCatalogSorting.Container.ALPHABETICAL_DESC;
+                        break;
+                    case ALPHABETICAL_DESC:
+                        next = StockroomCatalogSorting.Container.DISTANCE_ASC;
+                        break;
+                    case DISTANCE_ASC:
+                        next = StockroomCatalogSorting.Container.DISTANCE_DESC;
+                        break;
+                    case DISTANCE_DESC:
+                    default:
+                        next = StockroomCatalogSorting.Container.ALPHABETICAL_ASC;
+                        break;
+                }
+                button.setValue(next);
                 containerSorting = button.getValue();
                 requestPacket();
                 updateContents();
             }));
             for (int i = 0; i < ROWS_PER_PAGE; i++) {
                 final int j = i; // I love Java
-                removeButtons.add(addRenderableWidget(new SpriteButton.RegularAndHighlightSprite(REMOVE_ICON, REMOVE_ICON_HIGHLIGHTED, x + 189, i * 19 + 29, 16, 16, p -> {
+                removeButtons.add(addButton(new SpriteButton.RegularAndHighlightSprite(REMOVE_ICON, REMOVE_ICON_HIGHLIGHTED, x + 189, i * 19 + 29, 16, 16, p -> {
                     updateData(data -> data.remove(GlobalPos.of(ClientUtil.getLevel().dimension(), visibleContainers.get(j))));
                     setDataOnStack();
                     requestPacket();
                     updateContents();
                 })));
-                locateButtons.add(addRenderableWidget(new SpriteButton.RegularAndHighlightSprite(LOCATE_ICON, LOCATE_ICON_HIGHLIGHTED, x + 206, i * 19 + 29, 16, 16, p -> addParticles(visibleContainers.get(j)))));
+                locateButtons.add(addButton(new SpriteButton.RegularAndHighlightSprite(LOCATE_ICON, LOCATE_ICON_HIGHLIGHTED, x + 206, i * 19 + 29, 16, 16, p -> addParticles(visibleContainers.get(j)))));
             }
         } else {
-            addRenderableWidget(new SortButton<>(StockroomCatalogSorting.Item.ALPHABETICAL_ASC, x + 172, 11, 52, 14, b -> {
+            addButton(new SortButton<>(StockroomCatalogSorting.Item.ALPHABETICAL_ASC, x + 172, 11, 52, 14, b -> {
                 SortButton<StockroomCatalogSorting.Item> button = (SortButton<StockroomCatalogSorting.Item>) b;
-                button.setValue(switch (button.getValue()) {
-                    case ALPHABETICAL_ASC -> StockroomCatalogSorting.Item.ALPHABETICAL_DESC;
-                    case ALPHABETICAL_DESC -> StockroomCatalogSorting.Item.COUNT_ASC;
-                    case COUNT_ASC -> StockroomCatalogSorting.Item.COUNT_DESC;
-                    case COUNT_DESC -> StockroomCatalogSorting.Item.ALPHABETICAL_ASC;
-                });
+                StockroomCatalogSorting.Item next;
+                switch (button.getValue()) {
+                    case ALPHABETICAL_ASC:
+                        next = StockroomCatalogSorting.Item.ALPHABETICAL_DESC;
+                        break;
+                    case ALPHABETICAL_DESC:
+                        next = StockroomCatalogSorting.Item.COUNT_ASC;
+                        break;
+                    case COUNT_ASC:
+                        next = StockroomCatalogSorting.Item.COUNT_DESC;
+                        break;
+                    case COUNT_DESC:
+                    default:
+                        next = StockroomCatalogSorting.Item.ALPHABETICAL_ASC;
+                        break;
+                }
+                button.setValue(next);
                 itemSorting = button.getValue();
                 requestPacket();
                 updateContents();
             }));
             for (int i = 0; i < ROWS_PER_PAGE; i++) {
                 final int j = i; // I love Java
-                locateButtons.add(addRenderableWidget(new SpriteButton.RegularAndHighlightSprite(LOCATE_ICON, LOCATE_ICON_HIGHLIGHTED, x + 206, i * 19 + 29, 16, 16, p -> addParticles(visibleItems.get(j)))));
+                locateButtons.add(addButton(new SpriteButton.RegularAndHighlightSprite(LOCATE_ICON, LOCATE_ICON_HIGHLIGHTED, x + 206, i * 19 + 29, 16, 16, p -> addParticles(visibleItems.get(j)))));
             }
         }
         updateContents();
     }
 
-    /** 1.20.1: EditBox.setTextShadow not available; use reflection to set shadow field. */
-    private static void setEditBoxTextShadow(EditBox editBox) {
+    /** 1.20.1: TextFieldWidget.setTextShadow not available; use reflection to set shadow field. */
+    private static void setEditBoxTextShadow(TextFieldWidget editBox) {
         try {
             java.lang.reflect.Field shadow = editBox.getClass().getDeclaredField("f_94117_");
             shadow.setAccessible(true);
@@ -252,9 +277,10 @@ public class StockroomCatalogScreen extends Screen {
     }
 
     @Override
-    public void renderBackground(GuiGraphics graphics) {
+    public void renderBackground(MatrixStack graphics) {
         super.renderBackground(graphics);
-        graphics.blit(BACKGROUND, (width - 256) / 2 + 18, 2, 0, 0, 256, 256);
+        this.minecraft.getTextureManager().bind(BACKGROUND);
+        this.blit(graphics, (width - 256) / 2 + 18, 2, 0, 0, 256, 256);
     }
 
     @Override
@@ -273,25 +299,25 @@ public class StockroomCatalogScreen extends Screen {
     @Override
     public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
         if (super.keyPressed(keyCode, scanCode, modifiers)) return true;
-        return switch (keyCode) {
-            case GLFW.GLFW_KEY_PAGE_UP -> {
+        switch (keyCode) {
+case GLFW.GLFW_KEY_PAGE_UP: {
                 backButton.onPress();
-                yield true;
+                return true;
             }
-            case GLFW.GLFW_KEY_PAGE_DOWN -> {
+case GLFW.GLFW_KEY_PAGE_DOWN: {
                 forwardButton.onPress();
-                yield true;
+                return true;
             }
-            default -> false;
-        };
+default: return false;
+}
     }
 
     public void setFromPacket(StockroomCatalogListPacket packet) {
-        Level level = ClientUtil.getLevel();
+        World level = ClientUtil.getLevel();
         containers = packet.containers()
                 .stream()
-                .filter(e -> level.getBlockEntity(e) != null && level.getBlockEntity(e).getCapability(ForgeCapabilities.ITEM_HANDLER, null).isPresent())
-                .toList();
+                .filter(e -> level.getBlockEntity(e) != null && level.getBlockEntity(e).getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY, null).isPresent())
+                .collect(java.util.stream.Collectors.toList());
         items = packet.items();
         updateContents();
     }
@@ -317,7 +343,7 @@ public class StockroomCatalogScreen extends Screen {
         showContainerList = !showContainerList;
         page = 0;
         search = "";
-        rebuildWidgets();
+        init(this.minecraft, this.width, this.height);
         updateContents();
     }
 
@@ -353,7 +379,7 @@ public class StockroomCatalogScreen extends Screen {
                 .filter(e -> BCUtil.getNameAtPos(ClientUtil.getLevel(), e).getString().toLowerCase(Locale.ROOT).contains(search))
                 .skip((long) page * ROWS_PER_PAGE)
                 .limit(ROWS_PER_PAGE)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 
     private void buildVisibleItemsCache() {
@@ -361,7 +387,7 @@ public class StockroomCatalogScreen extends Screen {
                 .filter(e -> e.item().getHoverName().getString().toLowerCase(Locale.ROOT).contains(search))
                 .skip((long) page * ROWS_PER_PAGE)
                 .limit(ROWS_PER_PAGE)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 
     private void addParticles(StockroomCatalogItemEntry entry) {
@@ -371,7 +397,7 @@ public class StockroomCatalogScreen extends Screen {
     }
 
     private void addParticles(BlockPos pos) {
-        ParticleEngine particles = ClientUtil.getMc().particleEngine;
+        ParticleManager particles = ClientUtil.getMc().particleEngine;
         for (int i = 0; i < PARTICLE_COUNT; i++) {
             Particle particle = particles.createParticle(ParticleTypes.POOF, pos.getX() + random.nextDouble(), pos.getY() + random.nextDouble(), pos.getZ() + random.nextDouble(), 0, 0, 0);
             if (particle != null) {
@@ -383,8 +409,8 @@ public class StockroomCatalogScreen extends Screen {
     private static class SortButton<E extends Enum<E> & StockroomCatalogSorting> extends Button {
         private E value;
 
-        public SortButton(E initialValue, int x, int y, int width, int height, OnPress onPress) {
-            super(new Builder(message(initialValue), onPress).bounds(x, y, width, height));
+        public SortButton(E initialValue, int x, int y, int width, int height, Button.IPressable onPress) {
+            super(x, y, width, height, message(initialValue), onPress);
             value = initialValue;
         }
 
@@ -397,8 +423,8 @@ public class StockroomCatalogScreen extends Screen {
             setMessage(message(value));
         }
 
-        private static <T extends StockroomCatalogSorting> Component message(T t) {
-            return Component.translatable(Translations.STOCKROOM_CATALOG_SORT_KEY, Component.translatable(t.getTranslationKey()));
+        private static <T extends StockroomCatalogSorting> ITextComponent message(T t) {
+            return new TranslationTextComponent(Translations.STOCKROOM_CATALOG_SORT_KEY, new TranslationTextComponent(t.getTranslationKey()));
         }
     }
 }
