@@ -3,36 +3,43 @@ package com.github.minecraftschurlimods.bibliocraft.content.fancycrafter;
 import com.github.minecraftschurlimods.bibliocraft.init.BCBlockEntities;
 import com.github.minecraftschurlimods.bibliocraft.util.BCUtil;
 import com.github.minecraftschurlimods.bibliocraft.util.block.BCMenuBlockEntity;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.sounds.SoundSource;
-import net.minecraft.world.entity.item.ItemEntity;
-import net.minecraft.world.entity.player.Inventory;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.core.NonNullList;
-import net.minecraft.world.inventory.AbstractContainerMenu;
-import net.minecraft.world.inventory.CraftingContainer;
-import net.minecraft.world.inventory.MenuType;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.CraftingRecipe;
-import net.minecraft.world.item.crafting.RecipeManager;
-import net.minecraft.world.item.crafting.RecipeType;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.phys.Vec3;
+import com.github.minecraftschurlimods.bibliocraft.util.slot.HasToggleableSlots;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.Direction;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.SoundEvents;
+import net.minecraft.util.SoundCategory;
+import net.minecraft.entity.item.ItemEntity;
+import net.minecraft.entity.player.PlayerInventory;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.util.NonNullList;
+import net.minecraft.inventory.IInventory;
+import net.minecraft.inventory.container.Container;
+import net.minecraft.inventory.CraftingInventory;
+import net.minecraft.inventory.container.ContainerType;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.crafting.ICraftingRecipe;
+import net.minecraft.item.crafting.RecipeManager;
+import net.minecraft.item.crafting.IRecipeType;
+import net.minecraft.world.World;
+import net.minecraft.block.BlockState;
+import net.minecraft.util.math.vector.Vector3d;
 import net.minecraftforge.items.IItemHandler;
 import net.minecraftforge.items.wrapper.InvWrapper;
-import org.jetbrains.annotations.Nullable;
+import javax.annotation.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.IntStream;
 
-public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
+public class FancyCrafterBlockEntity extends BCMenuBlockEntity implements net.minecraft.tileentity.ITickableTileEntity, HasToggleableSlots {
     private static final String CRAFTING_TICKS_REMAINING_KEY = "crafting_ticks_remaining";
+    private static final String DISABLED_SLOTS_KEY = "disabled_slots";
+    static final int SLOT_DISABLED = 1;
+    static final int SLOT_ENABLED = 0;
+    static final int CRAFTING_SLOTS = 9;
     private static final int MAX_CRAFTING_TICKS = 6;
+    private final boolean[] disabledSlots = new boolean[CRAFTING_SLOTS];
     private final InvWrapper wrapper = new InvWrapper(this) {
         @Override
         public ItemStack insertItem(int slot, ItemStack stack, boolean simulate) {
@@ -45,27 +52,42 @@ public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
         }
     };
     private int craftingTicksRemaining = MAX_CRAFTING_TICKS;
-    private CraftingRecipe recipe;
+    private ICraftingRecipe recipe;
 
     public FancyCrafterBlockEntity(BlockPos pos, BlockState state) {
         super(BCBlockEntities.FANCY_CRAFTER.get(), 18, defaultName("fancy_crafter"), pos, state);
     }
 
-    public int getRedstoneSignal() {
-        return (int) IntStream.range(0, 9).filter(i -> !getItem(i).isEmpty()).count();
+    @Override
+    public void tick() {
+        // 1.20.1 getTicker is server-only; ITickableTileEntity runs on both sides in 1.16.5.
+        if (level != null && !level.isClientSide()) {
+            tick(level, getBlockPos(), getBlockState(), this);
+        }
     }
 
-    public static void tick(Level level, BlockPos pos, BlockState state, FancyCrafterBlockEntity blockEntity) {
+    public int getRedstoneSignal() {
+        int count = 0;
+        for (int i = 0; i < CRAFTING_SLOTS; i++) {
+            if (!getItem(i).isEmpty() || isSlotDisabled(i)) {
+                count++;
+            }
+        }
+        return count;
+    }
+
+    public static void tick(World level, BlockPos pos, BlockState state, FancyCrafterBlockEntity blockEntity) {
+        if (!state.getValue(FancyCrafterBlock.POWERED)) return;
         if (blockEntity.recipe == null) return;
-        CraftingRecipe recipe = blockEntity.recipe;
-        ItemStack result = recipe.getResultItem(level.registryAccess());
+        ICraftingRecipe recipe = blockEntity.recipe;
+        ItemStack result = recipe.getResultItem();
         ItemStack resultStack = blockEntity.getItem(9);
-        if (!resultStack.isEmpty() && (!ItemStack.isSameItemSameTags(result, resultStack) || result.getCount() + resultStack.getCount() > result.getMaxStackSize()))
+        if (!resultStack.isEmpty() && (!(ItemStack.isSame(result, resultStack) && ItemStack.tagMatches(result, resultStack)) || result.getCount() + resultStack.getCount() > result.getMaxStackSize()))
             return;
         blockEntity.craftingTicksRemaining--;
         if (blockEntity.craftingTicksRemaining > 0) return;
-        CraftingContainer input = blockEntity.createCraftingInput(blockEntity.getInputs());
-        ItemStack assembled = recipe.assemble(input, level.registryAccess());
+        CraftingInventory input = blockEntity.createCraftingInput(blockEntity.getInputs());
+        ItemStack assembled = recipe.assemble(input);
         blockEntity.setItem(9, blockEntity.tryDispense(level, pos, assembled, state));
         blockEntity.craftingTicksRemaining = MAX_CRAFTING_TICKS;
         recipe.getRemainingItems(input).stream()
@@ -74,14 +96,14 @@ public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
         List<ItemStack> inputs = new ArrayList<>(blockEntity.getInputs()
                 .stream()
                 .filter(e -> !e.isEmpty())
-                .toList());
+                .collect(java.util.stream.Collectors.toList()));
         // for loop instead of stream chain to prevent CME
         for (int i = 10; i < 18; i++) {
             ItemStack stack = blockEntity.getItem(i);
             if (stack.isEmpty()) continue;
             List<ItemStack> toRemove = new ArrayList<>();
             for (ItemStack e : inputs) {
-                if (!ItemStack.isSameItemSameTags(e, stack)) continue;
+                if (!(ItemStack.isSame(e, stack) && ItemStack.tagMatches(e, stack))) continue;
                 if (e.getCount() >= e.getMaxStackSize()) continue;
                 if (stack.isEmpty()) continue;
                 e.grow(1);
@@ -99,32 +121,75 @@ public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
 
     @Override
     public void setItem(int slot, ItemStack stack) {
+        if (isSlotDisabled(slot) && !stack.isEmpty()) {
+            setSlotDisabled(slot, false);
+        }
         super.setItem(slot, stack);
         calculateRecipe();
     }
 
     @Override
     public boolean canPlaceItem(int slot, ItemStack stack) {
-        if (stack.hasCraftingRemainingItem()) return false;
+        if (isSlotDisabled(slot)) return false;
+        if (stack.hasContainerItem()) return false;
         ItemStack slotStack = getItem(slot);
         return slotStack.isEmpty() || slotStack.getCount() < slotStack.getMaxStackSize() && !smallerStackExists(slotStack.getCount(), stack, slot);
     }
 
     @Override
-    protected AbstractContainerMenu createMenu(int id, Inventory inventory) {
+    public boolean canDisableSlot(int slot) {
+        return isCraftingSlot(slot) && getItem(slot).isEmpty();
+    }
+
+    @Override
+    public boolean isSlotDisabled(int slot) {
+        return isCraftingSlot(slot) && disabledSlots[slot];
+    }
+
+    @Override
+    public void setSlotDisabled(int slot, boolean disabled) {
+        if (!canDisableSlot(slot)) return;
+        disabledSlots[slot] = disabled;
+        setChanged();
+    }
+
+    @Override
+    protected Container createMenu(int id, PlayerInventory inventory) {
         return new FancyCrafterMenu(id, inventory, this);
     }
 
     @Override
-    public void load(CompoundTag tag) {
-        super.load(tag);
+    public void load(BlockState state, CompoundNBT tag) {
+        super.load(state, tag);
         craftingTicksRemaining = tag.getInt(CRAFTING_TICKS_REMAINING_KEY);
+        for (int i = 0; i < CRAFTING_SLOTS; i++) {
+            disabledSlots[i] = false;
+        }
+        if (tag.contains(DISABLED_SLOTS_KEY)) {
+            for (int slot : tag.getIntArray(DISABLED_SLOTS_KEY)) {
+                if (canDisableSlot(slot)) {
+                    disabledSlots[slot] = true;
+                }
+            }
+        }
     }
 
     @Override
-    protected void saveAdditional(CompoundTag tag) {
-        super.saveAdditional(tag);
+    public CompoundNBT save(CompoundNBT tag) {
+        super.save(tag);
         tag.putInt(CRAFTING_TICKS_REMAINING_KEY, craftingTicksRemaining);
+        java.util.List<Integer> disabled = new java.util.ArrayList<>();
+        for (int i = 0; i < CRAFTING_SLOTS; i++) {
+            if (isSlotDisabled(i)) {
+                disabled.add(i);
+            }
+        }
+        int[] stored = new int[disabled.size()];
+        for (int i = 0; i < disabled.size(); i++) {
+            stored[i] = disabled.get(i);
+        }
+        tag.putIntArray(DISABLED_SLOTS_KEY, stored);
+        return tag;
     }
 
     @Override
@@ -138,88 +203,50 @@ public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
 
     private boolean smallerStackExists(int currentSize, ItemStack stack, int slot) {
         for (int i = slot + 1; i < 9; i++) {
+            if (isSlotDisabled(i)) continue;
             ItemStack slotStack = getItem(i);
-            if (slotStack.isEmpty() || slotStack.getCount() < currentSize && ItemStack.isSameItemSameTags(slotStack, stack))
+            if (slotStack.isEmpty() || slotStack.getCount() < currentSize && (ItemStack.isSame(slotStack, stack) && ItemStack.tagMatches(slotStack, stack)))
                 return true;
         }
         return false;
     }
 
-    private CraftingContainer createCraftingInput(List<ItemStack> items) {
-        TransientCraftingContainer inv = new TransientCraftingContainer();
+    private CraftingInventory createCraftingInput(List<ItemStack> items) {
+        CraftingInventory inv = new CraftingInventory(new Container((ContainerType<?>) null, -1) {
+            @Override
+            public boolean stillValid(PlayerEntity player) {
+                return false;
+            }
+        }, 3, 3);
         for (int i = 0; i < 9 && i < items.size(); i++) {
             inv.setItem(i, items.get(i));
         }
         return inv;
     }
 
-    /** Minimal CraftingContainer implementation for recipe matching (1.20.1: interface has no concrete type). */
-    private static final class TransientCraftingContainer implements CraftingContainer {
-        private final NonNullList<ItemStack> craftItems = NonNullList.withSize(9, ItemStack.EMPTY);
-
-        @Override
-        public int getWidth() { return 3; }
-        @Override
-        public int getHeight() { return 3; }
-        @Override
-        public NonNullList<ItemStack> getItems() { return craftItems; }
-        @Override
-        public int getContainerSize() { return 9; }
-        @Override
-        public boolean isEmpty() { return craftItems.stream().allMatch(ItemStack::isEmpty); }
-        @Override
-        public ItemStack getItem(int slot) { return slot >= 0 && slot < 9 ? craftItems.get(slot) : ItemStack.EMPTY; }
-        @Override
-        public ItemStack removeItem(int slot, int count) {
-            if (slot < 0 || slot >= 9) return ItemStack.EMPTY;
-            return craftItems.get(slot).split(count);
-        }
-        @Override
-        public ItemStack removeItemNoUpdate(int slot) {
-            if (slot < 0 || slot >= 9) return ItemStack.EMPTY;
-            ItemStack stack = craftItems.get(slot);
-            craftItems.set(slot, ItemStack.EMPTY);
-            return stack;
-        }
-        @Override
-        public void setItem(int slot, ItemStack stack) {
-            if (slot >= 0 && slot < 9) craftItems.set(slot, stack == null ? ItemStack.EMPTY : stack);
-        }
-        @Override
-        public void clearContent() { craftItems.clear(); }
-        @Override
-        public boolean stillValid(Player player) { return false; }
-        @Override
-        public void setChanged() {}
-        @Override
-        public void fillStackedContents(net.minecraft.world.entity.player.StackedContents contents) {
-            for (ItemStack stack : craftItems) contents.accountStack(stack);
-        }
-    }
-
     private void calculateRecipe() {
         if (level() == null) return;
         RecipeManager recipes = level().getRecipeManager();
-        CraftingContainer input = createCraftingInput(getInputs());
-        recipe = recipes.getRecipeFor(RecipeType.CRAFTING, input, level()).orElse(null);
-        items.setStackInSlot(9, recipe == null ? ItemStack.EMPTY : recipe.getResultItem(level().registryAccess()).copy());
+        CraftingInventory input = createCraftingInput(getInputs());
+        recipe = recipes.getRecipeFor(IRecipeType.CRAFTING, input, level()).orElse(null);
+        items.setStackInSlot(9, recipe == null ? ItemStack.EMPTY : recipe.getResultItem().copy());
     }
 
-    private ItemStack tryDispense(Level level, BlockPos pos, ItemStack stack, BlockState state) {
+    private ItemStack tryDispense(World level, BlockPos pos, ItemStack stack, BlockState state) {
         Direction direction = state.getValue(FancyCrafterBlock.FACING);
         stack = BCUtil.tryInsert(level, pos, direction, stack, this);
         if (!stack.isEmpty() && !level.isClientSide() && level.getBlockState(pos.above()).getCollisionShape(level, pos.above()).isEmpty()) {
-            Vec3 vec3 = Vec3.atCenterOf(pos.above());
+            Vector3d vec3 = Vector3d.atCenterOf(pos.above());
             ItemEntity entity = new ItemEntity(level, vec3.x(), vec3.y(), vec3.z(), stack);
             level.addFreshEntity(entity);
-            level.playSound(null, pos, SoundEvents.DISPENSER_DISPENSE, SoundSource.BLOCKS, 1, 1);
+            level.playSound(null, pos, SoundEvents.DISPENSER_DISPENSE, SoundCategory.BLOCKS, 1, 1);
             return ItemStack.EMPTY;
         }
         return stack;
     }
 
     private List<ItemStack> getInputs() {
-        return IntStream.range(0, 9).mapToObj(this::getItem).toList();
+        return IntStream.range(0, 9).mapToObj(this::getItem).collect(java.util.stream.Collectors.toList());
     }
 
     /**
@@ -228,7 +255,7 @@ public class FancyCrafterBlockEntity extends BCMenuBlockEntity {
      */
     public void consumeIngredientsForResult() {
         if (recipe == null || level() == null) return;
-        CraftingContainer input = createCraftingInput(getInputs());
+        CraftingInventory input = createCraftingInput(getInputs());
         List<ItemStack> remaining = recipe.getRemainingItems(input);
         for (int i = 0; i < 9 && i < remaining.size(); i++) {
             setItem(i, remaining.get(i));
