@@ -1,21 +1,21 @@
 package com.github.minecraftschurlimods.bibliocraft.content.printingtable;
 
+import net.minecraft.util.text.StringTextComponent;
 import com.github.minecraftschurlimods.bibliocraft.content.typewriter.TypewriterPage;
 import com.github.minecraftschurlimods.bibliocraft.init.BCItems;
 import com.github.minecraftschurlimods.bibliocraft.init.BCRecipes;
 import com.google.gson.JsonObject;
 import com.mojang.datafixers.util.Pair;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.RecipeSerializer;
-import net.minecraft.world.level.Level;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.StringTag;
+import net.minecraft.network.PacketBuffer;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.Items;
+import net.minecraft.item.crafting.Ingredient;
+import net.minecraft.item.crafting.IRecipeSerializer;
+import net.minecraft.world.World;
+import net.minecraft.nbt.ListNBT;
+import net.minecraft.nbt.StringNBT;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -29,12 +29,12 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
     }
 
     @Override
-    public boolean matches(PrintingTableRecipeInput input, Level level) {
+    public boolean matches(PrintingTableRecipeInput input, World level) {
         if (input.left().isEmpty()) return false;
         if (input.right().isEmpty()) return false;
         if (!ingredient.test(input.right())) return false;
         for (ItemStack stack : input.left()) {
-            if (!stack.isEmpty() && !stack.is(BCItems.TYPEWRITER_PAGE.get())) return false;
+            if (!stack.isEmpty() && stack.getItem() != BCItems.TYPEWRITER_PAGE.get()) return false;
             if (!stack.isEmpty()) {
                 TypewriterPage page = TypewriterPage.getFromStack(stack);
                 if (page.lines().stream().allMatch(String::isEmpty)) return false;
@@ -44,19 +44,19 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
     }
 
     @Override
-    public ItemStack assemble(PrintingTableRecipeInput input, RegistryAccess registries) {
-        ItemStack result = getResultItem(registries).copy();
-        List<Component> pageComponents = new ArrayList<>();
+    public ItemStack assemble(PrintingTableRecipeInput input) {
+        ItemStack result = getResultItem().copy();
+        List<ITextComponent> pageComponents = new ArrayList<>();
         for (ItemStack stack : input.left()) {
             if (stack.isEmpty()) continue;
-            if (!stack.is(BCItems.TYPEWRITER_PAGE.get())) continue;
+            if (stack.getItem() != BCItems.TYPEWRITER_PAGE.get()) continue;
             TypewriterPage page = TypewriterPage.getFromStack(stack);
             pageComponents.add(concatTypewriterPageText(page));
         }
         if (pageComponents.isEmpty()) return result;
-        ListTag pagesTag = new ListTag();
-        for (Component comp : pageComponents) {
-            pagesTag.add(StringTag.valueOf(Component.Serializer.toJson(comp)));
+        ListNBT pagesTag = new ListNBT();
+        for (ITextComponent comp : pageComponents) {
+            pagesTag.add(StringNBT.valueOf(ITextComponent.Serializer.toJson(comp)));
         }
         result.getOrCreateTag().put("pages", pagesTag);
         result.getOrCreateTag().putString("title", "");
@@ -66,13 +66,13 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
     }
 
     @Override
-    public RecipeSerializer<?> getSerializer() {
+    public IRecipeSerializer<?> getSerializer() {
         return BCRecipes.PRINTING_TABLE_BINDING_TYPEWRITER_PAGES.get();
     }
 
     @Override
     public ItemStack postProcess(ItemStack result, PrintingTableBlockEntity blockEntity) {
-        Component name = blockEntity.getPlayerName();
+        ITextComponent name = blockEntity.getPlayerName();
         if (name != null && result.hasTag() && result.getTag().contains("author")) {
             result.getOrCreateTag().putString("author", name.getString());
         }
@@ -81,7 +81,7 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
 
     @Override
     public Pair<List<Ingredient>, Ingredient> getDisplayIngredients() {
-        return Pair.of(List.of(Ingredient.of(BCItems.TYPEWRITER_PAGE.get())), ingredient);
+        return Pair.of(java.util.Collections.singletonList(Ingredient.of(BCItems.TYPEWRITER_PAGE.get())), ingredient);
     }
 
     @Override
@@ -89,7 +89,7 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
         ((Serializer) getSerializer()).toJson(json, this);
     }
 
-    private static Component concatTypewriterPageText(TypewriterPage page) {
+    private static ITextComponent concatTypewriterPageText(TypewriterPage page) {
         StringBuilder builder = new StringBuilder();
         for (int i = 0; i < page.lines().size(); i++) {
             String line = page.lines().get(i);
@@ -100,25 +100,25 @@ public class PrintingTableBindingTypewriterPagesRecipe extends PrintingTableBind
                 builder.append('\n');
             }
         }
-        return Component.literal(builder.toString());
+        return new StringTextComponent(builder.toString());
     }
 
-    public static class Serializer implements RecipeSerializer<PrintingTableBindingTypewriterPagesRecipe> {
+    public static class Serializer extends net.minecraftforge.registries.ForgeRegistryEntry<net.minecraft.item.crafting.IRecipeSerializer<?>> implements IRecipeSerializer<PrintingTableBindingTypewriterPagesRecipe> {
         @Override
         public PrintingTableBindingTypewriterPagesRecipe fromJson(ResourceLocation id, JsonObject json) {
-            Ingredient ingredient = Ingredient.fromJson(json.getAsJsonObject("ingredient"), false);
+            Ingredient ingredient = Ingredient.fromJson(json.getAsJsonObject("ingredient"));
             int duration = json.getAsJsonPrimitive("duration").getAsInt();
             return new PrintingTableBindingTypewriterPagesRecipe(id, ingredient, duration);
         }
 
         @Override
-        public void toNetwork(FriendlyByteBuf buffer, PrintingTableBindingTypewriterPagesRecipe recipe) {
+        public void toNetwork(PacketBuffer buffer, PrintingTableBindingTypewriterPagesRecipe recipe) {
             recipe.ingredient.toNetwork(buffer);
             buffer.writeVarInt(recipe.duration);
         }
 
         @Override
-        public PrintingTableBindingTypewriterPagesRecipe fromNetwork(ResourceLocation id, FriendlyByteBuf buffer) {
+        public PrintingTableBindingTypewriterPagesRecipe fromNetwork(ResourceLocation id, PacketBuffer buffer) {
             Ingredient ingredient = Ingredient.fromNetwork(buffer);
             int duration = buffer.readVarInt();
             return new PrintingTableBindingTypewriterPagesRecipe(id, ingredient, duration);
