@@ -6,45 +6,51 @@ import com.github.minecraftschurlimods.bibliocraft.init.BCRecipes;
 import com.github.minecraftschurlimods.bibliocraft.util.BCUtil;
 import com.github.minecraftschurlimods.bibliocraft.util.CodecUtil;
 import com.github.minecraftschurlimods.bibliocraft.util.block.BCMenuBlockEntity;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.core.Holder;
-import net.minecraft.core.HolderSet;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.TagKey;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.chat.Component;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.world.entity.player.Inventory;
-import net.minecraft.world.inventory.AbstractContainerMenu;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.ChunkPos;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.material.Fluid;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
+import com.github.minecraftschurlimods.bibliocraft.util.slot.HasToggleableSlots;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.Direction;
+import net.minecraftforge.registries.IForgeRegistryEntry;
+import net.minecraft.tags.ITag;
+import net.minecraft.util.registry.Registry;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.tags.ITag;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.world.server.ServerWorld;
+import net.minecraft.entity.player.PlayerInventory;
+import net.minecraft.inventory.IInventory;
+import net.minecraft.inventory.container.Container;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.math.ChunkPos;
+import net.minecraft.world.World;
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.block.BlockState;
+import net.minecraft.fluid.Fluid;
+import net.minecraftforge.items.CapabilityItemHandler;
 import net.minecraftforge.fluids.capability.IFluidHandler;
-import net.minecraftforge.network.PacketDistributor;
-import org.jetbrains.annotations.Nullable;
+import net.minecraftforge.fml.network.PacketDistributor;
+import javax.annotation.Nullable;
 
 import java.util.List;
 import java.util.stream.IntStream;
 
-public class PrintingTableBlockEntity extends BCMenuBlockEntity {
+public class PrintingTableBlockEntity extends BCMenuBlockEntity implements net.minecraft.tileentity.ITickableTileEntity, HasToggleableSlots {
     private static final String MODE_KEY = "mode";
     private static final String DURATION_KEY = "duration";
     private static final String PLAYER_NAME_KEY = "player_name";
+    private static final String DISABLED_SLOTS_KEY = "disabled_slots";
+    private static final int SLOT_DISABLED = 1;
+    private static final int SLOT_ENABLED = 0;
     private final PrintingTableTank tank;
     private final Direction[] directions;
+    private final boolean[] disabledSlots = new boolean[9];
     private PrintingTableRecipe recipe;
     private PrintingTableRecipeInput recipeInput;
     private PrintingTableMode mode = PrintingTableMode.BIND;
     private int levelCost = 0;
     private int duration = 0;
     private int maxDuration = 0;
-    private Component playerName = null;
+    private ITextComponent playerName = null;
 
     public PrintingTableBlockEntity(BlockPos pos, BlockState state) {
         super(BCBlockEntities.PRINTING_TABLE.get(), 11, defaultName("printing_table"), pos, state);
@@ -53,8 +59,15 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
         directions = new Direction[]{Direction.UP, facing, facing.getClockWise(), facing.getOpposite(), facing.getCounterClockWise(), Direction.DOWN};
     }
 
+    @Override
+    public void tick() {
+        if (level != null) {
+            tick(level, getBlockPos(), getBlockState(), this);
+        }
+    }
+
     @SuppressWarnings("unused")
-    public static void tick(Level level, BlockPos pos, BlockState state, PrintingTableBlockEntity blockEntity) {
+    public static void tick(World level, BlockPos pos, BlockState state, PrintingTableBlockEntity blockEntity) {
         if (blockEntity.duration < blockEntity.maxDuration && blockEntity.isExperienceFull()) {
             blockEntity.duration++;
         }
@@ -71,38 +84,51 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
     }
 
     @Override
-    protected AbstractContainerMenu createMenu(int id, Inventory inventory) {
+    protected Container createMenu(int id, PlayerInventory inventory) {
         return new PrintingTableMenu(id, inventory, this);
     }
 
     @Override
-    public void load(CompoundTag tag) {
-        super.load(tag);
+    public void load(BlockState state, CompoundNBT tag) {
+        super.load(state, tag);
         setMode(CodecUtil.decodeNbt(PrintingTableMode.CODEC, tag.get(MODE_KEY)));
         duration = tag.getInt(DURATION_KEY);
-        if (tag.contains(PLAYER_NAME_KEY, CompoundTag.TAG_STRING)) {
-            playerName = Component.Serializer.fromJson(tag.getString(PLAYER_NAME_KEY));
+        if (tag.contains(PLAYER_NAME_KEY, net.minecraftforge.common.util.Constants.NBT.TAG_STRING)) {
+            playerName = ITextComponent.Serializer.fromJson(tag.getString(PLAYER_NAME_KEY));
         }
         tank.loadAdditional(tag);
+        int[] tagSlots = tag.contains(DISABLED_SLOTS_KEY) ? tag.getIntArray(DISABLED_SLOTS_KEY) : new int[9];
+        for (int i = 0; i < 9; i++) {
+            disabledSlots[i] = canDisableSlot(i) && i < tagSlots.length && tagSlots[i] == SLOT_DISABLED;
+        }
     }
 
     @Override
-    protected void saveAdditional(CompoundTag tag) {
-        super.saveAdditional(tag);
+    public CompoundNBT save(CompoundNBT tag) {
+        super.save(tag);
         tag.put(MODE_KEY, CodecUtil.encodeNbt(PrintingTableMode.CODEC, getMode()));
         tag.putInt(DURATION_KEY, duration);
         if (playerName != null) {
-            tag.putString(PLAYER_NAME_KEY, Component.Serializer.toJson(playerName));
+            tag.putString(PLAYER_NAME_KEY, ITextComponent.Serializer.toJson(playerName));
         }
         tank.saveAdditional(tag);
+        int[] tagSlots = new int[9];
+        for (int i = 0; i < 9; i++) {
+            tagSlots[i] = disabledSlots[i] ? SLOT_DISABLED : SLOT_ENABLED;
+        }
+        tag.putIntArray(DISABLED_SLOTS_KEY, tagSlots);
+        return tag;
     }
 
     @Override
     public void setItem(int slot, ItemStack stack) {
+        if (isSlotDisabled(slot) && !stack.isEmpty()) {
+            setSlotDisabled(slot, false);
+        }
         ItemStack old = getItem(slot).copy();
         super.setItem(slot, stack);
         recipeInput = null;
-        if (!ItemStack.isSameItemSameTags(old, stack) || recipe == null || !recipe.matches(getRecipeInput(), BCUtil.nonNull(getLevel()))) {
+        if (!(ItemStack.isSame(old, stack) && ItemStack.tagMatches(old, stack)) || recipe == null || !recipe.matches(getRecipeInput(), BCUtil.nonNull(getLevel()))) {
             calculateRecipe(false);
             setChanged();
         }
@@ -110,7 +136,24 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
 
     @Override
     public boolean canPlaceItem(int slot, ItemStack stack) {
-        return slot < 10 && !stack.hasCraftingRemainingItem() && super.canPlaceItem(slot, stack);
+        return slot < 10 && !stack.hasContainerItem() && !isSlotDisabled(slot) && super.canPlaceItem(slot, stack);
+    }
+
+    @Override
+    public void setSlotDisabled(int slot, boolean disabled) {
+        if (!canDisableSlot(slot)) return;
+        disabledSlots[slot] = disabled;
+        setChanged();
+    }
+
+    @Override
+    public boolean isSlotDisabled(int slot) {
+        return isCraftingSlot(slot) && disabledSlots[slot];
+    }
+
+    @Override
+    public boolean canDisableSlot(int slot) {
+        return isCraftingSlot(slot) && getItem(slot).isEmpty();
     }
 
     @Override
@@ -122,8 +165,8 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
         }
     }
 
-    public static IFluidHandler getFluidCapability(Level level, BlockPos pos, BlockState state, @Nullable BlockEntity blockEntity, @Nullable Direction context) {
-        return blockEntity instanceof PrintingTableBlockEntity printingTable ? printingTable.getFluidCapability() : null;
+    public static IFluidHandler getFluidCapability(World level, BlockPos pos, BlockState state, @Nullable TileEntity blockEntity, @Nullable Direction context) {
+        return blockEntity instanceof PrintingTableBlockEntity ? ((PrintingTableBlockEntity) blockEntity).getFluidCapability() : null;
     }
 
     public PrintingTableTank getFluidCapability() {
@@ -140,11 +183,11 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
         setChanged();
     }
 
-    public Component getPlayerName() {
+    public ITextComponent getPlayerName() {
         return playerName;
     }
 
-    public void setPlayerName(Component playerName) {
+    public void setPlayerName(ITextComponent playerName) {
         this.playerName = playerName;
     }
 
@@ -194,8 +237,8 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
         if (recipe == null) return;
         List<ItemStack> remainingItems = recipe.getRemainingItems(getRecipeInput());
         ItemStack stack = getItem(10);
-        ItemStack result = recipe.postProcess(recipe.assemble(getRecipeInput(), level().registryAccess()), this);
-        if (!stack.isEmpty() && !ItemStack.isSameItemSameTags(stack, result)) return;
+        ItemStack result = recipe.postProcess(recipe.assemble(getRecipeInput()), this);
+        if (!stack.isEmpty() && !(ItemStack.isSame(stack, result) && ItemStack.tagMatches(stack, result))) return;
         result.setCount(stack.getCount() + 1);
         setItem(10, result);
         IntStream.range(0, 10)
@@ -209,22 +252,12 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
         calculateRecipe(false);
     }
 
-    private static final TagKey<net.minecraft.world.level.material.Fluid> EXPERIENCE_FLUID_TAG = TagKey.create(Registries.FLUID, new ResourceLocation("forge", "experience"));
-
     private void pullExperience() {
-        List<Fluid> fluids = level()
-                .registryAccess()
-                .registryOrThrow(Registries.FLUID)
-                .getTag(EXPERIENCE_FLUID_TAG)
-                .map(HolderSet.Named::stream)
-                .orElseGet(java.util.stream.Stream::empty)
-                .map(Holder::value)
-                .toList();
         for (Direction direction : directions) {
-            BlockEntity adjacent = level().getBlockEntity(getBlockPos().offset(direction.getNormal()));
-            IFluidHandler capability = adjacent != null ? adjacent.getCapability(ForgeCapabilities.FLUID_HANDLER, direction.getOpposite()).orElse(null) : null;
+            TileEntity adjacent = level().getBlockEntity(getBlockPos().offset(direction.getNormal()));
+            IFluidHandler capability = adjacent != null ? adjacent.getCapability(net.minecraftforge.fluids.capability.CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY, direction.getOpposite()).orElse(null) : null;
             if (capability == null) continue;
-            for (Fluid fluid : fluids) {
+            for (Fluid fluid : PrintingTableTank.experienceFluids()) {
                 tank.fillFromCapability(capability, fluid);
                 if (isExperienceFull()) return;
             }
@@ -232,15 +265,19 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
     }
 
     private void calculateRecipe(boolean onLoad) {
-        if (!(level() instanceof ServerLevel serverLevel)) return;
+        if (!(level() instanceof ServerWorld)) return;
+        ServerWorld serverLevel = (ServerWorld) level();
         recipe = serverLevel
                 .getRecipeManager()
-                .getRecipeFor(BCRecipes.PRINTING_TABLE.get(), getRecipeInput(), serverLevel)
+                .getRecipesFor(BCRecipes.PRINTING_TABLE, getRecipeInput(), serverLevel)
+                .stream()
                 .filter(e -> e.getMode() == mode)
+                .findFirst()
                 .orElse(null);
         if (recipe != null) {
             ItemStack output = getItem(10);
-            if (!output.isEmpty() && (output.getCount() >= output.getMaxStackSize() || !ItemStack.isSameItemSameTags(recipe.assemble(getRecipeInput(), level().registryAccess()), output))) {
+            ItemStack assembled = recipe.assemble(getRecipeInput());
+            if (!output.isEmpty() && (output.getCount() >= output.getMaxStackSize() || !(ItemStack.isSame(assembled, output) && ItemStack.tagMatches(assembled, output)))) {
                 recipe = null;
             }
         }
@@ -255,7 +292,7 @@ public class PrintingTableBlockEntity extends BCMenuBlockEntity {
 
     private PrintingTableRecipeInput getRecipeInput() {
         if (recipeInput == null) {
-            recipeInput = new PrintingTableRecipeInput(IntStream.range(0, 9).mapToObj(this::getItem).toList(), getItem(9));
+            recipeInput = new PrintingTableRecipeInput(IntStream.range(0, 9).mapToObj(this::getItem).collect(java.util.stream.Collectors.toList()), getItem(9));
         }
         return recipeInput;
     }
